--- a/index.html
+++ b/index.html
@@ -2,14 +2,34 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <title>Cookie Farm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="CSS/style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="jquery-3.2.1.min.js"></script>
-        <script src="script.js"></script>
+        <script src="JS/script.js"></script>
     </head>
     <body>
+        <div class="container-fluid">
+            <div class="row">
+                <div id="cookieSpot" class="col-sm-4">
+                    <h1>Cookie Farm</h1>
+                        <div class="cookieNumberSpot">
+                            Your cookies:
+                            <input class="cookieNumber" type="text" disabled value="0">
+                        </div>
+                    <img class="perfectCookie" src="CSS/IMGS/perfectCookie.png">
+                </div>
+                <div id="upgradeSpot" class="col-sm-4">
+                    <h1>Upgrades</h1>
+                </div>
+                <div id="optionSpot" class="col-sm-4">
+                    <h1>Options</h1>
+                    <button class="saveBtn btn btn-success">Save</button>
+                    <button class="loadBtn btn btn-primary">Load</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
