Désactivations de 3 bouttons dans (#upgradeSpot)

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
                 <div id="optionSpot" class="col-sm-4">
                     <h1><span class="glyphicon glyphicon-cog"></span> Options</h1>
-                    <button class="saveBtn btn btn-success">Save</button>
-                    <button class="loadBtn btn btn-primary">Load</button>
+                    <button class="saveBtn btn btn-success" disabled>Save</button>
+                    <button class="loadBtn btn btn-primary" disabled>Load</button>
                     <button class="resetBtn btn btn-warning">Reset</button>
-                    <button class="deleteBtn btn btn-danger">Delete</button>
+                    <button class="deleteBtn btn btn-danger" disabled>Delete</button>
                 </div>
             </div>
         </div>
