--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Cookie Farm</title>
+        <title>CS:GO Farm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="CSS/style.css" />
@@ -13,26 +13,26 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div id="cookieSpot" class="col-sm-4">
-                    <h1>Cookie Farm</h1>
-                        <div class="cookieNumberSpot">
-                            <input class="cookieNumber" type="text" disabled value="0">
-                            <span style="font-weight: bold;"> Cookies</span>
+                <div id="caseSpot" class="col-sm-4">
+                    <h1>CS:GO Farm</h1>
+                        <div class="caseNumberSpot">
+                            <input class="caseNumber" type="text" disabled value="0">
+                            <span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span>
                         </div>
-                        <div class="cookiePerSecSpot">
-                            <input class="cookiePerSec" type="text" disabled value="0">
-                            <span style="font-weight: bold;">Cookies/s</span>
+                        <div class="casePerSecSpot">
+                            <input class="casePerSec" type="text" disabled value="0">
+                            <span class="glyphicon glyphicon-euro" style="font-weight: bold;">/s</span>
                         </div>
-                        <div class="cookiePerClickSpot">
-                            <input class="cookiePerClick" type="text" disabled value="1">
-                            <span style="font-weight: bold;">Cookies/click</span>
+                        <div class="casePerClickSpot">
+                            <input class="casePerClick" type="text" disabled value="1">
+                            <span class="glyphicon glyphicon-euro" style="font-weight: bold;">/click</span>
                         </div>
-                    <img class="perfectCookie" src="CSS/IMGS/perfectCookie.png">
+                    <img class="caseCsgoImg" src="CSS/IMGS/caseCsgo.png">
                 </div>
                 <div id="upgradeSpot" class="col-sm-4">
                     <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades</h1>
-                    <button class="btn btn-default autoClickBtn"><span class="glyphicon glyphicon-hand-up" style="color: black;"> Clicker</span><input class="clickerUpgInpt1" type="text" disabled value="0" max="50"><input class="clickerUpgInpt2" type="text" disabled value="20"><span style="font-weight: bold;"> c</span></button>
-                    <button class="btn btn-default farmUpg"><span class="glyphicon glyphicon-home" style="color: black;"> Farm</span><input class="clickerUpgInpt1" type="text" disabled value="0" max="25"><input class="clickerUpgInpt2" type="text" disabled value="45"><span style="font-weight: bold;"> c</span></button>
+                    <button class="btn btn-default glockBtn"><span class="glyphicon glyphicon-hand-up" style="color: black;"> Clicker</span><input class="clickerUpgInpt1" type="text" disabled value="0" max="50"><input class="clickerUpgInpt2" type="text" disabled value="20"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></button>
+                    <button class="btn btn-default uspBtn"><span class="glyphicon glyphicon-home" style="color: black;"> Farm</span><input class="clickerUpgInpt1" type="text" disabled value="0" max="25"><input class="clickerUpgInpt2" type="text" disabled value="45"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></button>
                 </div>
                 <div id="optionSpot" class="col-sm-4">
                     <h1><span class="glyphicon glyphicon-cog"></span> Options</h1>
