--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container noSelect .iCentered">
             <div class="row">
-                <div id="caseSpot" class="col-sm-4">
+                <div id="caseSpot" class="col-sm-4 col-md-4">
                     <h1>CS:GO Farm</h1>
                         <div class="caseNumberSpot">
                             <input class="caseNumber" type="text" disabled value="0">
@@ -29,18 +29,49 @@
                         </div>
                     <img class="caseCsgoImg" src="CSS/IMGS/caseCsgo.png" draggable="false">
                 </div>
-                <div id="upgradeSpot" class="col-sm-4">
+                <div id="upgradeSpot" class="col-sm-4 col-md-4">
                     <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades</h1>
-                    <button class="btn btn-default glockBtn"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/G-18/Glock-18.ico"> Glock</span><input class="clickerUpgInpt1" type="text" disabled value="0" max="50"><input class="clickerUpgInpt2" type="text" disabled value="20"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></button>
-                    <button class="btn btn-default uspBtn"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Usp/USP-S.ico"> Usp-s</span><input class="clickerUpgInpt1" type="text" disabled value="0" max="45"><input class="clickerUpgInpt2" type="text" disabled value="30"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></button>
-                    <button class="btn btn-default p250Btn"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/P250/p250.ico"> P250</span><input class="clickerUpgInpt1" type="text" disabled value="0" max="40"><input class="clickerUpgInpt2" type="text" disabled value="45"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></button>
+                    <div class="groupBtn">
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default glockBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/G-18/Glock-18.ico"> Glock</span>
+                        <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="20"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
+                        <button class="btn btn-danger sell sellGlock">Sell</button>
+                    </div>
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default uspBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Usp/USP-S.ico"> Usp-s</span>
+                        <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="30"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
+                        <button class="btn btn-danger sell sellUsp">Sell</button>
+                    </div>
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default p250Btn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/P250/p250.ico"> P250</span>
+                        <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="45"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
+                        <button class="btn btn-danger sell sellP250">Sell</button>
+                    </div>
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default deagBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Desert_Eagle/Desert_Eagle.ico"> Deagle</span>
+                        <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="68"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <button class="btn btn-danger sell sellDeag">Sell</button>
+                    </div>
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default tec9Btn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Tec-9/Tec-9.ico"> Tec-9</span>
+                        <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="102"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <button class="btn btn-danger sell sellTec9">Sell</button>
+                    </div>
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default fiveBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Five-Seven/Five-SeveN.ico"> Five</span>
+                        <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="153"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <button class="btn btn-danger sell sellFive">Sell</button>
+                    </div>
                 </div>
-                <div id="optionSpot" class="col-sm-4">
-                    <h1><span class="glyphicon glyphicon-cog"></span> Options</h1>
-                    <button class="saveBtn btn btn-success" disabled>Save</button>
-                    <button class="loadBtn btn btn-primary" disabled>Load</button>
-                    <button class="resetBtn btn btn-warning">Reset</button>
-                    <button class="deleteBtn btn btn-danger" disabled>Delete</button>
+            </div>
+                <div id="optionSpot" class="col-sm-4 col-md-4">
+                        <h1><span class="glyphicon glyphicon-cog"></span> Options</h1>
+                    <div class="groupBtn">
+                        <button class="saveBtn btn btn-success" disabled>Save</button>
+                        <button class="loadBtn btn btn-primary" disabled>Load</button>
+                        <button class="resetBtn btn btn-warning" disabled>Reset</button>
+                        <button class="deleteBtn btn btn-danger" disabled>Delete</button>
+                    </div>
                 </div>
             </div>
         </div>
