Minor update (Ajout du button info dans upgradeSpot)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="JS/script.js"></script>
     </head>
     <body>
-        <div class="container noSelect .iCentered">
+        <div class="container noSelect .iCenter">
             <div class="row">
                 <div id="caseSpot" class="col-sm-4 col-md-4">
                     <h1>CS:GO Farm</h1>
@@ -30,7 +30,7 @@
                     <img class="caseCsgoImg" src="CSS/IMGS/caseCsgo.png" draggable="false">
                 </div>
                 <div id="upgradeSpot" class="col-sm-4 col-md-4">
-                    <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades</h1>
+                    <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades <button class="btn btn-info infoBtn"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
                     <div class="groupBtn">
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default glockBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/G-18/Glock-18.ico"> Glock</span>
