--- a/index.html
+++ b/index.html
@@ -2,61 +2,134 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>CS:GO Farm</title>
+            <title>CS:GO Farm</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="CSS/style.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="JS/script.js"></script>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+            <link rel="stylesheet" href="CSS/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="JS/script.js"></script>
+    <script src="JS/script2.js"></script>
     </head>
     <body>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-12">
+                <div id="myModalCase" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">CS:GO Farm</h4>
+                      </div>
+                      <div class="modal-body">
+                        <p>Some text in the modal.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+                <div id="myModalUpgrades" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">About Upgrades</h4>
+                      </div>
+                      <div class="modal-body">
+                        <p>Some text in the modal.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+                <div id="myModalOptions" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Advanced Options</h4>
+                      </div>
+                      <div class="modal-body">
+                        <p>Some text in the modal.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
         <div class="container noSelect .iCenter">
             <div class="row">
+
                 <div id="caseSpot" class="col-sm-4 col-md-4">
-                    <h1>CS:GO Farm</h1>
+
+                    <h1>CS:GO Farm <button class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalCase"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
                         <div class="caseNumberSpot">
                             <input class="caseNumber" type="text" disabled value="0">
                             <span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span>
                         </div>
+
                         <div class="casePerSecSpot">
                             <input class="casePerSec" type="text" disabled value="0">
                             <span class="glyphicon glyphicon-euro" style="font-weight: bold;">/s</span>
                         </div>
+
                         <div class="casePerClickSpot">
                             <input class="casePerClick" type="text" disabled value="1">
                             <span class="glyphicon glyphicon-euro" style="font-weight: bold;">/click</span>
                         </div>
+
                     <img class="caseCsgoImg" src="CSS/IMGS/caseCsgo.png" draggable="false">
                 </div>
+
                 <div id="upgradeSpot" class="col-sm-4 col-md-4">
-                    <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades <button class="btn btn-info infoBtn"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
+
+                    <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades <button class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalUpgrades"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
+
                     <div class="groupBtn">
+
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default glockBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/G-18/Glock-18.ico"> Glock</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="20"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
                         <button class="btn btn-danger sell sellGlock">Sell</button>
                     </div>
+
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default uspBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Usp/USP-S.ico"> Usp-s</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="30"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
                         <button class="btn btn-danger sell sellUsp">Sell</button>
                     </div>
+
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default p250Btn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/P250/p250.ico"> P250</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="45"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
                         <button class="btn btn-danger sell sellP250">Sell</button>
                     </div>
+
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default deagBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Desert_Eagle/Desert_Eagle.ico"> Deagle</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="68"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
                         <button class="btn btn-danger sell sellDeag">Sell</button>
                     </div>
+
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default tec9Btn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Tec-9/Tec-9.ico"> Tec-9</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="102"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
                         <button class="btn btn-danger sell sellTec9">Sell</button>
                     </div>
+
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default fiveBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Five-Seven/Five-SeveN.ico"> Five</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="153"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
@@ -64,8 +137,11 @@
                     </div>
                 </div>
             </div>
+
                 <div id="optionSpot" class="col-sm-4 col-md-4">
-                        <h1><span class="glyphicon glyphicon-cog"></span> Options</h1>
+
+                    <h1><span class="glyphicon glyphicon-cog"></span> Options <button class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalOptions"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
+
                     <div class="groupBtn">
                         <button class="saveBtn btn btn-success" disabled>Save</button>
                         <button class="loadBtn btn btn-primary" disabled>Load</button>
