--- a/index.html
+++ b/index.html
@@ -43,8 +43,19 @@
                         <h4 class="modal-title">About Upgrades</h4>
                       </div>
                       <div class="modal-body">
-                        <p>Some text in the modal.</p>
-                      </div>
+                        <p><strong><u>About them:</u></strong></p>
+                        <p></p>
+                        <p>- Upgrades will help get more € per seconds et clicks.</p>
+                        <p>- The limit for each upgrades is 15.</p>
+                        <p><strong><u>All Upgrades:</u></strong></p>
+                        <p><u>Pistols:</u></p>
+                        <p>- Glock (+1/s and +1/click)</p>
+                        <p>- Usp-S (+2/s and +2/click)</p>
+                        <p>- P250 (+3/s and +3/click)</p>
+                        <p>- Desert-Eagle (+4/s and +4/click)</p>
+                        <p>- Tec-9 (+4/s and +4/click)</p>
+                        <p>- Five-Seven (+5/s and +5/click)</p>
+                     </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                       </div>
@@ -58,7 +69,7 @@
                     <!-- Modal content-->
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">Advanced Options</h4>
+                        <h4 class="modal-title">About Options</h4>
                       </div>
                       <div class="modal-body">
                         <p>Some text in the modal.</p>
@@ -73,9 +84,9 @@
         <div class="container noSelect .iCenter">
             <div class="row">
 
-                <div id="caseSpot" class="col-sm-4 col-md-4">
+                <div id="caseSpot" class="col-sm-12 col-md-6 col-lg-4">
 
-                    <h1>CS:GO Farm <button class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalCase"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
+                    <h1>CS:GO Farm <button type="button" class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalCase"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
                         <div class="caseNumberSpot">
                             <input class="caseNumber" type="text" disabled value="0">
                             <span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span>
@@ -94,59 +105,66 @@
                     <img class="caseCsgoImg" src="CSS/IMGS/caseCsgo.png" draggable="false">
                 </div>
 
-                <div id="upgradeSpot" class="col-sm-4 col-md-4">
+                <div id="upgradeSpot" class="col-md-6 col-lg-4">
 
-                    <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades <button class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalUpgrades"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
-
+                    <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades <button type="button" class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalUpgrades"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
+                        <div class="moreUpgBtn">
+                            <div class="glockMoreUpg">
+                                <button type="button" class="damageBtn btn btn-basic" data-toggle="popover" title="COST" data-content="500000€" data-trigger="focus">Damage+</button>
+                                <button type="button" class="recoilBtn btn btn-basic">Recoil+</button>
+                                <button type="button" class="accuracyBtn btn btn-basic">Accuracy+</button>
+                                <button type="button" class="statstrakBtn btn btn-basic">Statstrak</button>
+                            </div>
+                        </div>
                     <div class="groupBtn">
 
                         <div class="btn-group btnGroup" role="group">
-                    <button class="btn btn-default glockBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/G-18/Glock-18.ico"> Glock</span>
+                    <button type="button" class="btn btn-default glockBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/G-18/Glock-18.ico"> Glock</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="20"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
-                        <button class="btn btn-danger sell sellGlock">Sell</button>
+                        <button type="button" class="btn btn-danger sell sellGlock">Sell</button>
                     </div>
 
                         <div class="btn-group btnGroup" role="group">
-                    <button class="btn btn-default uspBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Usp/USP-S.ico"> Usp-s</span>
+                    <button type="button" class="btn btn-default uspBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Usp/USP-S.ico"> Usp-s</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="30"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
-                        <button class="btn btn-danger sell sellUsp">Sell</button>
+                        <button type="button" class="btn btn-danger sell sellUsp">Sell</button>
                     </div>
 
                         <div class="btn-group btnGroup" role="group">
-                    <button class="btn btn-default p250Btn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/P250/p250.ico"> P250</span>
+                    <button type="button" class="btn btn-default p250Btn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/P250/p250.ico"> P250</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="45"><span class="glyphicon glyphicon-euro" style="font-weight: bold;"></span></div></button>
-                        <button class="btn btn-danger sell sellP250">Sell</button>
+                        <button type="button" class="btn btn-danger sell sellP250">Sell</button>
                     </div>
 
                         <div class="btn-group btnGroup" role="group">
-                    <button class="btn btn-default deagBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Desert_Eagle/Desert_Eagle.ico"> Deagle</span>
+                    <button type="button" class="btn btn-default deagBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Desert_Eagle/Desert_Eagle.ico"> Deagle</span>
                         <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="68"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
-                        <button class="btn btn-danger sell sellDeag">Sell</button>
+                        <button type="button" class="btn btn-danger sell sellDeag">Sell</button>
                     </div>
 
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default tec9Btn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Tec-9/Tec-9.ico"> Tec-9</span>
-                        <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="102"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="102"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
                         <button class="btn btn-danger sell sellTec9">Sell</button>
                     </div>
 
                         <div class="btn-group btnGroup" role="group">
                     <button class="btn btn-default fiveBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Five-Seven/Five-SeveN.ico"> Five</span>
-                        <input class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="153"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="153"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
                         <button class="btn btn-danger sell sellFive">Sell</button>
                     </div>
                 </div>
             </div>
 
-                <div id="optionSpot" class="col-sm-4 col-md-4">
+                <div id="optionSpot" class=" col-md-12 col-lg-4">
 
-                    <h1><span class="glyphicon glyphicon-cog"></span> Options <button class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalOptions"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
+                    <h1><span class="glyphicon glyphicon-cog"></span> Options <button type="button" class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalOptions"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
 
                     <div class="groupBtn">
-                        <button class="saveBtn btn btn-success" disabled>Save</button>
-                        <button class="loadBtn btn btn-primary" disabled>Load</button>
-                        <button class="resetBtn btn btn-warning" disabled>Reset</button>
-                        <button class="deleteBtn btn btn-danger" disabled>Delete</button>
+                        <button type="button" class="saveBtn btn btn-success" disabled>Save</button>
+                        <button type="button" class="loadBtn btn btn-primary" disabled>Load</button>
+                        <button type="button" class="resetBtn btn btn-warning" disabled>Reset</button>
+                        <button type="button" class="deleteBtn btn btn-danger" disabled>Delete</button>
                     </div>
                 </div>
             </div>
