Big update (Ajouts de 5 améliorations)

--- a/index.html
+++ b/index.html
@@ -53,8 +53,15 @@
                         <p>- Usp-S (+2/s and +2/click)</p>
                         <p>- P250 (+3/s and +3/click)</p>
                         <p>- Desert-Eagle (+4/s and +4/click)</p>
-                        <p>- Tec-9 (+4/s and +4/click)</p>
-                        <p>- Five-Seven (+5/s and +5/click)</p>
+                        <p>- Tec-9 (+5/s and +5/click)</p>
+                        <p>- Five-Seven (+6/s and +6/click)</p>
+                        <p><u>Assaults:</u><p>
+                        <p>- Famas (+12/s and +12/click)</p>
+                        <p>- Galil (+14/s and +14/click)</p>
+                        <p>- M4A1-S (+16/s and +16/click)</p>
+                        <p>- Scout (+18/s and +18/click)</p>
+                        <p>- Ak-47 (+20/s and +20/click)</p>
+                        <p>- AWP (+22/s and +22/click)</p>
                      </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -108,14 +115,14 @@
                 <div id="upgradeSpot" class="col-md-6 col-lg-4">
 
                     <h1><span class="glyphicon glyphicon-tasks"></span> Upgrades <button type="button" class="btn btn-info infoBtnUpg" data-toggle="modal" data-target="#myModalUpgrades"><span class="glyphicon glyphicon-question-sign infoIcon"></span></buttons></h1>
-                        <div class="moreUpgBtn">
+                        <!--<div class="moreUpgBtn">
                             <div class="glockMoreUpg">
                                 <button type="button" class="damageBtn btn btn-basic" data-toggle="popover" title="COST" data-content="500000€" data-trigger="focus">Damage+</button>
-                                <button type="button" class="recoilBtn btn btn-basic">Recoil+</button>
+                                <button type="button" class="recoilBtn btn btn-basic" data-toggle="popover" title="COST" data-content="1000000€" data-trigger="focus">Recoil+</button>
                                 <button type="button" class="accuracyBtn btn btn-basic">Accuracy+</button>
                                 <button type="button" class="statstrakBtn btn btn-basic">Statstrak</button>
                             </div>
-                        </div>
+                        </div>-->
                     <div class="groupBtn">
 
                         <div class="btn-group btnGroup" role="group">
@@ -153,6 +160,43 @@
                         <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="15"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="153"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
                         <button class="btn btn-danger sell sellFive">Sell</button>
                     </div>
+
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default famasBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/TheRest/s555fn.ico"> Famas</span>
+                        <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="10"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="306"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <button class="btn btn-danger sell sellFamas">Sell</button>
+                    </div>
+
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default galilBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/TheRest/s650fn.ico"> Galil</span>
+                        <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="10"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="459"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <button class="btn btn-danger sell sellGalil">Sell</button>
+                    </div>
+
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default m4Btn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/M4A1-S/M4A1-S.ico"> M4A1-S</span>
+                        <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="10"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="689"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <button class="btn btn-danger sell sellM4">Sell</button>
+                    </div>
+
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default scoutBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/TheRest/s200.ico"> Scout</span>
+                        <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="10"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="1034"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <button class="btn btn-danger sell sellScout">Sell</button>
+                    </div>
+
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default akBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Ak/Ak_Cartel.ico"> Ak-47</span>
+                        <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="10"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="1551"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                        <button class="btn btn-danger sell sellAk">Sell</button>
+                    </div>
+
+                        <div class="btn-group btnGroup" role="group">
+                    <button class="btn btn-default awpBtn btnUpg"><span><img class="upgIcon" src="CSS/IMGS/csgo/Weapons/Awp/Awp.ico"> AWP</span>
+                            <input type="button" class="clickerUpgInpt1" type="text" disabled value="0" max="10"><div class="floatRight"><input class="clickerUpgInpt2" type="text" disabled value="2327"><span class="glyphicon glyphicon-euro" style="font-weight: bold"></span></div></button>
+                            <button class="btn btn-danger sell sellAwp">Sell</button>
+                        </div>
+
                 </div>
             </div>
 
