--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <!-- Modal content-->
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">CS:GO Farm</h4>
+                        <h4 class="modal-title">ABout CS:GO Farm</h4>
                       </div>
                       <div class="modal-body">
                         <p>Some text in the modal.</p>
                       </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                       </div>
                     </div>
 
@@ -44,7 +44,6 @@
                       </div>
                       <div class="modal-body">
                         <p><strong><u>About them:</u></strong></p>
-                        <p></p>
                         <p>- Upgrades will help get more € per seconds et clicks.</p>
                         <p>- The limit for each upgrades is 15.</p>
                         <p><strong><u>All Upgrades:</u></strong></p>
@@ -213,5 +212,36 @@
                 </div>
             </div>
         </div>
+
+        <footer class="text-center">
+            <nav class="navbar navbar-default navbar-fixed-bottom">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                             <span class="icon-bar"></span>
+                             <span class="icon-bar"></span>
+                             <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav">
+                            <li><a href="#">...</a></li>
+                            <li><a href="#">...</a></li>
+                            <li><a href="#">...</a></li>
+                            <li><a href="#">...</a></li>
+                            <li><a href="#">...</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </nav>
+
+            <!-- <a href="#about">
+                <span class="glyphicon glyphicon-chevron-up"></span>
+            </a>
+            <h5>© 2017 Udemy.com</h5> -->
+        </footer>
+
     </body>
 </html>
