Minor update (Added more achievements and level 2)

--- a/index.html
+++ b/index.html
@@ -234,10 +234,12 @@
                         </div>
                         <div class="divider"></div>
                         <h4 class="yourAchievements">Your achievements</h4>
-                            <div class="iconAchievNo noBash bash-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
-                            <div class="iconAchiev bash bash-tooltip"><a data-toggle="tooltip" title="Your gained 1000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
-                            <div class="iconAchiev purple"></div>
-                            <div class="iconAchiev wine"></div>
+                            <div class="iconAchievNo noBash mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
+                            <div class="iconAchiev bash mod-tooltip"><a data-toggle="tooltip" title="Your gained 1 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
+                            <div class="iconAchievNo noBish mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico"></a></div>
+                            <div class="iconAchiev bish mod-tooltip"><a data-toggle="tooltip" title="Your gained 10 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico"></a></div>
+                            <div class="iconAchievNo noBosh mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico"></a></div>
+                            <div class="iconAchiev bosh mod-tooltip"><a data-toggle="tooltip" title="Your gained 100 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico"></a></div>
                         </div>
                     </div>
                 </div>
