Base created for Ads

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
               </div>
             </div>
-        <div class="container noSelect .iCenter">
+        <div class="container noSelect noCursor iCenter">
             <div class="row">
 
                 <div id="caseSpot" class="col-sm-12 col-md-6 col-lg-4">
@@ -122,12 +122,33 @@
                             <h4 class="yourBalanceSec">Euros per second</h4>
                             <input class="casePerSec" type="text" disabled value="0">
                         </div>
-                        <div class="casePerClickSpot">
+                        <!-- <div class="casePerClickSpot">
                             <h4 class="yourBalanceClick">Euros per click</h4>
                             <input class="casePerClick" type="text" disabled value="1">
+                        </div>-->
+                        <div id='org_div1'>
+                            <img id="caseCsgoImgId" class="caseCsgoImg" src="CSS/IMGS/caseCsgo3.png" draggable="false">
+                        </div>
+                        <h4 class="fadingEuroOne fadingEuro"></h4>
+                        <h4 class="fadingEuroTwo fadingEuro"></h4>
+                        <h4 class="fadingEuroThree fadingEuro"></h4>
+                        <h4 class="fadingEuroFour fadingEuro"></h4>
+                        <h4 class="fadingEuroFive fadingEuro"></h4>
+                        <h4 class="fadingEuroSix fadingEuro"></h4>
+                        <h4 class="fadingEuroSeven fadingEuro"></h4>
+                        <h4 class="fadingEuroEight fadingEuro"></h4>
+                        <h4 class="fadingEuroNine fadingEuro"></h4>
+                        <h4 class="fadingEuroTen fadingEuro"></h4>
+                        <h4 class="fadingEuroOneOne fadingEuro"></h4>
+                        <h4 class="fadingEuroOneTwo fadingEuro"></h4>
+                        <h4 class="fadingEuroOneThree fadingEuro"></h4>
+                        <h4 class="fadingEuroOneFour fadingEuro"></h4>
+
+                        <p style="margin-top: 10px; color: #ccc; font-size: 14px">Sponsored links<p>
+                        <div class="adSpot">
+                            <p>Ads Box<p>
                         </div>
 
-                    <img class="caseCsgoImg" src="CSS/IMGS/caseCsgo3.png" draggable="false">
                     <!-- <img class="glowingCircle" src="CSS/IMGS/caseCsgo3.png" draggable="false"> -->
                 </div>
 
@@ -142,6 +163,7 @@
                                 <button type="button" class="statstrakBtn btn btn-basic">Statstrak</button>
                             </div>
                         </div>-->
+                        <div class="btnUpgs">
                     <div class="groupBtn">
 
                         <div class="btn-group btnGroup" role="group">
@@ -217,6 +239,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
                 <div id="achievementSpot" class=" col-md-12 col-lg-4">
 
@@ -235,28 +258,28 @@
                         </div>
                         <div class="divider"></div>
                         <h4 class="yourAchievements">Your achievements</h4>
-                            <div class="iconAchievNo noBash mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
-                            <div class="iconAchiev bash mod-tooltip"><a data-toggle="tooltip" title="Gained 1 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico"></a></div>
-                            <div class="iconAchievNo noBish mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico"></a></div>
-                            <div class="iconAchiev bish mod-tooltip"><a data-toggle="tooltip" title="Gained 10 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico"></a></div>
-                            <div class="iconAchievNo noBosh mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico"></a></div>
-                            <div class="iconAchiev bosh mod-tooltip"><a data-toggle="tooltip" title="Gained 100 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico"></a></div>
-                            <div class="iconAchievNo noDrug mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Drug.ico"></a></div>
-                            <div class="iconAchiev drug mod-tooltip"><a data-toggle="tooltip" title="Gained 250 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Drug.ico"></a></div>
-                            <div class="iconAchievNo noRekt mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Rekt.ico"></a></div>
-                            <div class="iconAchiev rekt mod-tooltip"><a data-toggle="tooltip" title="Gained 500 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Rekt.ico"></a></div>
-                            <div class="iconAchievNo noSkull mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Skull.ico"></a></div>
-                            <div class="iconAchiev skull mod-tooltip"><a data-toggle="tooltip" title="Gained 1 000 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Skull.ico"></a></div>
-                            <div class="iconAchievNo noCsgo mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_.ico"></a></div>
-                            <div class="iconAchiev csgo mod-tooltip"><a data-toggle="tooltip" title="500 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_.ico"></a></div>
-                            <div class="iconAchievNo noCsgoBlue mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Blue.ico"></a></div>
-                            <div class="iconAchiev csgoBlue mod-tooltip"><a data-toggle="tooltip" title="1000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Blue.ico"></a></div>
-                            <div class="iconAchievNo noCsgoGreen mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Green.ico"></a></div>
-                            <div class="iconAchiev csgoGreen mod-tooltip"><a data-toggle="tooltip" title="2500 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Green.ico"></a></div>
-                            <div class="iconAchievNo noCsgoRed mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_RED.ico"></a></div>
-                            <div class="iconAchiev csgoRed mod-tooltip"><a data-toggle="tooltip" title="5000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_RED.ico"></a></div>
-                            <div class="iconAchievNo noFlick mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Flick.ico"></a></div>
-                            <div class="iconAchiev flick mod-tooltip"><a data-toggle="tooltip" title="10 000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Flick.ico"></a></div>
+                            <div class="iconAchievNo noBash mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico" draggable="false"></a></div>
+                            <div class="iconAchiev bash mod-tooltip"><a data-toggle="tooltip" title="Gained 1 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bash.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noBish mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico" draggable="false"></a></div>
+                            <div class="iconAchiev bish mod-tooltip"><a data-toggle="tooltip" title="Gained 10 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bish.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noBosh mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico" draggable="false"></a></div>
+                            <div class="iconAchiev bosh mod-tooltip"><a data-toggle="tooltip" title="Gained 100 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Bosh.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noDrug mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Drug.ico" draggable="false"></a></div>
+                            <div class="iconAchiev drug mod-tooltip"><a data-toggle="tooltip" title="Gained 250 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Drug.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noRekt mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Rekt.ico" draggable="false"></a></div>
+                            <div class="iconAchiev rekt mod-tooltip"><a data-toggle="tooltip" title="Gained 500 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Rekt.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noSkull mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Skull.ico" draggable="false"></a></div>
+                            <div class="iconAchiev skull mod-tooltip"><a data-toggle="tooltip" title="Gained 1 000 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Skull.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noCsgo mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_.ico" draggable="false"></a></div>
+                            <div class="iconAchiev csgo mod-tooltip"><a data-toggle="tooltip" title="500 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noCsgoBlue mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Blue.ico" draggable="false"></a></div>
+                            <div class="iconAchiev csgoBlue mod-tooltip"><a data-toggle="tooltip" title="1000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Blue.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noCsgoGreen mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Green.ico" draggable="false"></a></div>
+                            <div class="iconAchiev csgoGreen mod-tooltip"><a data-toggle="tooltip" title="2500 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Green.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noCsgoRed mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_RED.ico" draggable="false"></a></div>
+                            <div class="iconAchiev csgoRed mod-tooltip"><a data-toggle="tooltip" title="5000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_RED.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noFlick mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Flick.ico" draggable="false"></a></div>
+                            <div class="iconAchiev flick mod-tooltip"><a data-toggle="tooltip" title="10 000 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Flick.ico" draggable="false"></a></div>
                         </div>
                     </div>
                 </div>
@@ -273,7 +296,7 @@
                     </div>
                     <div class="collapse navbar-collapse" id="myNavbar">
                         <ul class="nav navbar-nav">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="#">...</a></li>
                             <li><a href="#">...</a></li>
                             <li><a href="#">...</a></li>
