--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </head>
     <body>
 
+        <img class="randomPopBoost" src="CSS/IMGS/csgo/Other/1.6.ico" alt="c4-1.6" draggable="false">
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-12">
@@ -23,7 +25,7 @@
                     <!-- Modal content-->
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">ABout CS:GO Farm</h4>
+                        <h2 class="modal-title">ABout CS:GO Farm</h2>
                       </div>
                       <div class="modal-body">
                         <p>Some text in the modal.</p>
@@ -41,7 +43,7 @@
                     <!-- Modal content-->
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">About Upgrades</h4>
+                        <h2 class="modal-title">About Upgrades</h2>
                       </div>
                       <div class="modal-body">
                         <p><strong><u>About them:</u></strong></p>
@@ -76,10 +78,30 @@
                     <!-- Modal content-->
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">About Achievements</h4>
+                        <h2 class="modal-title">About Achievements</h2>
                       </div>
                       <div class="modal-body">
                         <p>Some text in the modal.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+                <div id="myModalAntiAfk" class="modal fade" role="dialog" data-backdrop="static" data-keyboard="false">
+                  <div class="modal-dialog modal-sm">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h2 class="modal-title">Are you still here ?</h2>
+                      </div>
+                      <div class="modal-body">
+                        <p><strong>Why is this here ?</strong></p>
+                        <p>This is for avoiding scripts more commonly named as cheats.</p>
+                        <p>Not 100% efficient but still is quite efficient.</p>
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -96,7 +118,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal"><span style="color: red;">x</span></button>
-                    <h4 class="modal-title">About Options</h4>
+                    <h2 class="modal-title">L'achievement gagné</h2>
                   </div>
                   <div class="modal-body">
                     <p>Some text in the modal.</p>
