--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
               </div>
             </div>
-        <div class="container noSelect noCursor iCenter">
+        <div class="container-fluid noSelect noCursor iCenter">
             <div class="row">
 
                 <div id="caseSpot" class="col-sm-12 col-md-6 col-lg-4">
