Medium update(New animations, new achievement)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
     <body>
 
         <img class="randomPopBoost" src="CSS/IMGS/csgo/Other/1.6.ico" alt="c4-1.6" draggable="false">
-
+        <div class="achievBanner achievement-banner">
+            <div class="achievIconBanner achievement-icon">
+                <span class="icon"><span class="icon-trophy"></span></span>
+            </div>
+            <div class="achievTextBanner achievement-text">
+                <p class="achievement-notification">Achievement unlocked</p>
+                <p class="achievement-name">25G &ndash; CSS Achievement Banner</p>
+            </div>
+        </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-12">
@@ -272,10 +280,10 @@
                             <h4 class="yourClicks">Total of clicks</h4>
                                 <input class="clickTotal" type="text" disabled value="0">
                         <div class="divider"></div>
-                            <h4 class="yourLevel">Level 1</h4>
+                            <h4 class="yourLevel">Level 1 (level 2 = 600xp)</h4>
                         <div class="progress">
                             <div class="progress-bar progressBar" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
-                                <span class="progressBarText" style="color: #1E90FF;">0/500 Exp</span>
+                                <span class="progressBarText" style="color: #1E90FF;">0/600 Exp</span>
                             </div>
                         </div>
                         <div class="divider"></div>
@@ -292,6 +300,8 @@
                             <div class="iconAchiev rekt mod-tooltip"><a data-toggle="tooltip" title="Gained 500 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Rekt.ico" draggable="false"></a></div>
                             <div class="iconAchievNo noSkull mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Skull.ico" draggable="false"></a></div>
                             <div class="iconAchiev skull mod-tooltip"><a data-toggle="tooltip" title="Gained 1 000 000€"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Skull.ico" draggable="false"></a></div>
+                            <div class="iconAchievNo noNulu mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Nulu.ico" draggable="false"></a></div>
+                            <div class="iconAchiev nulu mod-tooltip"><a data-toggle="tooltip" title="10 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Stickers/Nulu.ico" draggable="false"></a></div>
                             <div class="iconAchievNo noCsgo mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_.ico" draggable="false"></a></div>
                             <div class="iconAchiev csgo mod-tooltip"><a data-toggle="tooltip" title="500 clicks"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_.ico" draggable="false"></a></div>
                             <div class="iconAchievNo noCsgoBlue mod-tooltip"><a data-toggle="tooltip" title="Locked"><img class="achievIcon" src="CSS/IMGS/csgo/Other/CSGO_Blue.ico" draggable="false"></a></div>
