--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a href="register.html"><button class="registerBtn" type="button">Register</button></a>-->
                     <div class="iCenter">
                         <div class="valueBox">
-                            <h1 style="padding: 0 0 7px 0">Pseudo du joueur</h1>
+                            <h1 style="padding: 0 0 7px 0;">Pseudo du joueur</h1>
                         </div>
                             <h5>(si connecté, sinon "Login et Logout")</h5>
                             <h2>Avatar du joueur</h2>
@@ -78,6 +78,7 @@
                                 <div class="valueBox">
                                     <p><strong>Trade link</strong></p>
                                     <input class="tradeLinkBox" type="text" value="" maxlength="100">
+                                    <button class="saveTradeLinkBtn btn btn-success">Save</button>
                                 </div>
                     </div>
                                 <p>...</p>
