Minor update and fix

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <h1>Clicker</h1>
                     <div class="clickerSpotContent col-md-12 col-lg-12">
-                        <img class="clickerImg" src="CSS/IMGS/clickerImg.jpg" alt="Screenshot of the clicker game"/>
+                        <img class="clickerImg" src="CSS/IMGS/csgoClickerMiniature.png" alt="Screenshot of the clicker game"/>
                         <div class="clickerSpotText">
                             <h3><strong>Win skins just by clicking</strong></h3>
                             <p style="color: #aaa;"><strong><em>How does this work ?</em></strong></p>
